--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
 						<li><a href="#">Nosotros</a></li>
 						<li><a href="#">Funciones</a></li>
 						<li><a href="#" onclick="alert('En construcción!');">Descargas</a></li>
-						<li><a href="#">Suscribete</a></li>
+						<li><a href="blog.php">Suscribete</a></li>
 						<li><a href="contact.html">Contactenos</a></li>
 					</ul>
 				</nav>
