--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 						<li><a href="#">Nosotros</a></li>
 						<li><a href="#">Funciones</a></li>
 						<li><a href="#" onclick="alert('En construcción!');">Descargas</a></li>
-						<li><a href="#">Suscribete</a></li>
+						<li><a href="blog.php">Suscribete</a></li>
 						<li><a href="contact.html">Contactenos</a></li>
 					</ul>
 				</nav>
@@ -80,7 +80,7 @@
 						<div class="col-md-8">
 							<h1 class="white-text">Whatssap Babel</h1>
 							<p class="lead white-text">Conectate y entiende a todos!</p>
-							<a class="main-button icon-button" href="#">Get Started!</a>
+							<a class="main-button icon-button" href="blog.php">Get Started!</a>
 						</div>
 					</div>
 				</div>
